--- a/package.json
+++ b/package.json
@@ -1,23 +1,45 @@
 {
-  "name": "eventmate",
-  "version": "1.0.0",
-  "main": "index.ts",
+  "name": "expo-events-feature",
+  "version": "0.1.0",
+  "private": true,
+  "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start -c",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "expo": "~53.0.20",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5"
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-navigation/elements": "^2.6.3",
+    "@shopify/flash-list": "1.6.4",
+    "@types/react": "~18.2.79",
+    "expo": "^51.0.0",
+    "expo-clipboard": "~6.0.3",
+    "expo-constants": "~16.0.1",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.1.0",
+    "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.0",
+    "expo-notifications": "~0.28.19",
+    "expo-router": "^3.5.10",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
-  },
-  "private": true
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-preset-expo": "^11.0.7",
+    "react-native-gradle-plugin": "^0.71.19",
+    "typescript": "^5.4.0"
+  }
 }
